Features adding started

--- a/index.html
+++ b/index.html
@@ -48,16 +48,38 @@
 	  <img src="images/Actbeg.png" class="img-fluid  d-sm-none d-md-none d-xl-inline" height="30%">
 	</div>
 	<div id="appdesc" class="container" style="color:white;font-family: 'Lato', sans-serif;">
-	 <h3 align="center">CCAPP</h3>
-	 <p align="center"><h5 align="center">CHRIST COLLEGE APP OFFICIAL ANDROID APP<br><br>
+	 <h3 align="center">CCAPP</h3><br>
+	 <h5 align="center">CHRIST COLLEGE APP OFFICIAL ANDROID APP<br><br>
 	 IS DEVELOPED</h5><br> 
 	<h5 align="center"">BY</h5><br>
-	<h5 align="center">CYBERKADA DEVELOPERS</h5></p>
+	<h5 align="center">CYBERKADA DEVELOPERS</h5><br>
     <img src="images/badge.png" class="mx-auto d-block">
 	</div>
 </div>	
-<div>	
-
+<div>
+<h3 align="center" class="mt-xl-3 mb-xl-3" style="color:#425b7c;text-decoration:underline;">FEATURES</h3>		
+<div class="row">
+<div class="col-md-2 col-sm-1 col-xl-3">
+<img src="images/Findroom.png">	
+<h5 align="center">FIND ROOMS</h5>
+<P align="center">Locate rooms situated<br> in the college</P>
+</div>
+<div class="col-md-2 col-sm-1 col-xl-3">
+		<img src="images/Find Seating.png">	
+		<h5 align="center">FIND ROOMS</h5>
+		<P align="center">Locate rooms situated<br> in the college</P>
+		</div>
+		<div class="col-md-2 col-sm-1 col-xl-3">
+				<img src="images/Findroom.png">	
+				<h5 align="center">FIND ROOMS</h5>
+				<P align="center">Locate rooms situated<br> in the college</P>
+				</div>
+				<div class="col-md-2 col-sm-1 col-xl-3">
+						<img src="images/Findroom.png">	
+						<h5 align="center">FIND ROOMS</h5>
+						<P align="center">Locate rooms situated<br> in the college</P>
+						</div>	
+</div>	
 </div>
 </body>
 </html>
