--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 <div class="container-fluid" style="background-image:url('images/back.jpg');">
     <div id="image-mob" class="float-right" style="width:20%;clear:none;">
-	  <img src="images/Actbeg.png" class="img-fluid  d-sm-none d-md-none d-xl-inline" height="30%">
+	  <img src="images/Actbeg.png" class="img-fluid  d-sm-none d-md-none d-xl-inline">
 	</div>
 	<div id="appdesc" class="container" style="color:white;font-family: 'Lato', sans-serif;">
 	 <h3 align="center">CCAPP</h3><br>
@@ -53,7 +53,7 @@
 	 IS DEVELOPED</h5><br> 
 	<h5 align="center"">BY</h5><br>
 	<h5 align="center">CYBERKADA DEVELOPERS</h5><br>
-    <img src="images/badge.png" class="mx-auto d-block">
+    <img src="images/badge.png" class="mx-auto d-block"><br>
 	</div>
 </div>	
 <div>
@@ -61,24 +61,19 @@
 <div class="row">
 <div class="col-md-2 col-sm-1 col-xl-3">
 <img src="images/Findroom.png">	
-<h5 align="center">FIND ROOMS</h5>
+<h5 align="center"><img src="images/explore.png" class="mr-1">FIND ROOMS</h5>
 <P align="center">Locate rooms situated<br> in the college</P>
 </div>
+<div class="col-md-2 col-sm-1 col-xl-3">	
+<img src="images/Find Seating.png">	
+<h5 align="center">FIND SEATING</h5>
+<P align="center">Seating arrangement of<br>main exams</P>
+</div>
 <div class="col-md-2 col-sm-1 col-xl-3">
-		<img src="images/Find Seating.png">	
-		<h5 align="center">FIND ROOMS</h5>
-		<P align="center">Locate rooms situated<br> in the college</P>
-		</div>
-		<div class="col-md-2 col-sm-1 col-xl-3">
-				<img src="images/Findroom.png">	
-				<h5 align="center">FIND ROOMS</h5>
-				<P align="center">Locate rooms situated<br> in the college</P>
-				</div>
-				<div class="col-md-2 col-sm-1 col-xl-3">
-						<img src="images/Findroom.png">	
-						<h5 align="center">FIND ROOMS</h5>
-						<P align="center">Locate rooms situated<br> in the college</P>
-						</div>	
+<img src="images/Findroom.png">	
+<h5 align="center">FIND ROOMS</h5>
+<P align="center">Locate rooms situated<br> in the college</P>
+</div>	
 </div>	
 </div>
 </body>
