Features about to finish

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 <!--Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
 	<title>Christ College App</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
@@ -34,7 +35,7 @@
  	  <a class="nav-link active" href="#appdesc">HOME</a>
     </li>
     <li class="nav-item mr-xl-3">
- 	  <a class="nav-link">FEATURES</a>
+ 	  <a class="nav-link" href="#FEATURES">FEATURES</a>
     </li>
     <li class="nav-item mr-xl-3">
  	  <a class="nav-link">CONTACT US</a>
@@ -44,35 +45,47 @@
 </nav>
 </div>
 <div class="container-fluid" style="background-image:url('images/back.jpg');">
-    <div id="image-mob" class="float-right" style="width:20%;clear:none;">
-	  <img src="images/Actbeg.png" class="img-fluid  d-sm-none d-md-none d-xl-inline">
-	</div>
-	<div id="appdesc" class="container" style="color:white;font-family: 'Lato', sans-serif;">
-	 <h3 align="center">CCAPP</h3><br>
-	 <h5 align="center">CHRIST COLLEGE APP OFFICIAL ANDROID APP<br><br>
-	 IS DEVELOPED</h5><br> 
-	<h5 align="center"">BY</h5><br>
-	<h5 align="center">CYBERKADA DEVELOPERS</h5><br>
-    <img src="images/badge.png" class="mx-auto d-block"><br>
-	</div>
+<div id="image-mob" class="float-right" style="width:20%;clear:none;">
+<img src="images/Actbeg.png" class="img-fluid  d-sm-none d-md-none d-xl-inline">
+</div>
+<div id="appdesc" class="container" style="color:white;font-family: 'Lato', sans-serif;">
+<h3 align="center">WELCOME TO THE OFFICIAL<br><br>WEBSITE<br><br>OF</h3><br>
+<h4 align="center">CCAPP<br><br>CHRIST COLLEGE APP OFFICIAL ANDROID APP<br><br>
+<img src="images/badge.png" class="mx-auto d-block"><br>
+</div>
 </div>	
-<div>
-<h3 align="center" class="mt-xl-3 mb-xl-3" style="color:#425b7c;text-decoration:underline;">FEATURES</h3>		
+<div id="FEATURES" style="background-color:#ede9e9;font-family: 'Hind Siliguri', sans-serif;
+">
+<b><h3 align="center" class="mt-xl-3 mb-xl-3" style="color:#425b7c;text-decoration:underline;">FEATURES</h3>		
+</b>
 <div class="row">
-<div class="col-md-2 col-sm-1 col-xl-3">
-<img src="images/Findroom.png">	
-<h5 align="center"><img src="images/explore.png" class="mr-1">FIND ROOMS</h5>
+<div class="col-md-2 col-sm-1 col-xl-3 card mr-xl-4">
+<div class="card-header">	
+<img src="images/Findroom.png">
+</div>
+<div class="card-footer">	
+<h5 align="center"><img src="images/explore.png" class="mr-1"><b>FIND ROOMS</b></h5>
 <P align="center">Locate rooms situated<br> in the college</P>
 </div>
-<div class="col-md-2 col-sm-1 col-xl-3">	
-<img src="images/Find Seating.png">	
-<h5 align="center">FIND SEATING</h5>
+</div>
+<div class="col-md-2 col-sm-1 col-xl-3 card mr-xl-4">	
+<div class="card-header">
+<img src="images/Find Seating.png">
+</div>	
+<div class="card-footer">
+<h5 align="center"><img src="images/seating_icon.png" class="mr-1"><b>FIND SEATING</b></h5>
 <P align="center">Seating arrangement of<br>main exams</P>
 </div>
-<div class="col-md-2 col-sm-1 col-xl-3">
-<img src="images/Findroom.png">	
-<h5 align="center">FIND ROOMS</h5>
-<P align="center">Locate rooms situated<br> in the college</P>
+</div>
+<div class="col-md-2 col-sm-1 col-xl-3 card">
+<div class="card-header">
+<img src="images/offline.png">
+</div>
+<div class="card-footer">	
+<h5 align="center"><img src="images/offline_icon.png" class="mr-1"><b>OFFLINE STORAGE</b></h5>
+<P align="center">Save your mobile data with<br> CCAPP's offline storage</P>
+</div>
+</div>
 </div>	
 </div>	
 </div>
