--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<title>Christ College App</title>
 </head>
 <body>	
-<div id="nav-nd-mob" class="container-fluid" style="background-image:url('images/back.jpg');">	
+<div id="nav-nd-mob" class="container-fluid">	
 <nav class="navbar navbar-expand-sm navbar-dark">
 <a class="navbar-brand" href="#appdesc"><h2>CCAPP</h2></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,7 +46,7 @@
 </div> 
 </nav>
 </div>
-<div class="container-fluid" style="background-image:url('images/back.jpg');">
+<div class="container-fluid" id="other">
 <div id="image-mob" class="float-right">
 <img src="images/Actbeg.png" id="begimg" class="img-fluid  d-sm-none d-md-none d-xl-inline mt-2">
 <br><br>
