--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 </div>
 <div class="container-fluid" id="other">
-<div id="image-mob" class="float-right">
+<div id="image-mob" class="float-xl-right float-sm-none">
 <img src="images/Actbeg.png" id="begimg" class="img-fluid  d-sm-none d-md-none d-xl-inline mt-2">
 <br><br>
 </div>
