--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>	
 <div id="nav-nd-mob" class="container-fluid">	
-<nav class="navbar navbar-expand-sm navbar-dark">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="navcolor" style="bottom: auto;padding-bottom: 0px;padding-top: 0px;">
 <a class="navbar-brand" href="#appdesc"><h2>CCAPP</h2></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 <span class="navbar-toggler-icon"></span>
@@ -39,14 +39,14 @@
     <li class="nav-item mr-xl-3">
  	  <a class="nav-link" href="#disqus_thread">FEEDBACK/COMMENTS</a>
 	</li>
-	<li class="nav-item mr-xl-3">
+	<li class="nav-item mr-xl-3 pb-2">
 		<a class="nav-link btn btn-light" style="color:black;">DOWNLOAD</a>
 	 </li>
  </ul>
 </div> 
 </nav>
 </div>
-<div class="container-fluid" id="other">
+<div class="container-fluid" id="other" style="padding-top:55px;">
 <div id="image-mob" class="float-xl-right float-sm-none">
 <img src="images/Actbeg.png" id="begimg" class="img-fluid  d-sm-none d-md-none d-xl-inline mt-2">
 <br><br>
