--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 <!--Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1049693375256518",
+    enable_page_level_ads: true
+  });
+</script>
 	<title>Christ College App</title>
 </head>
 <body>	
