Bottom description added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Website of ccapp christ college app">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<!-- jQuery library -->
@@ -73,35 +74,35 @@ facilities like Find Room,Seating<br>Arrangement of main exam and lot more.<br><
 </b>
 <div class="row">
 <div class="col-md-2 col-sm-1 col-xl-3 card mr-xl-4">
-<div class="card-header">	
+<div class="card-header bg-white">	
 <img src="images/Findroom.png">
 </div>
-<div class="card-footer">	
+<div class="card-footer bg-white">	
 <h5 align="center"><img src="images/explore.png" class="mr-1"><b>FIND ROOMS</b></h5>
 <P align="center">Locate rooms situated<br> in the college</P>
 </div>
 </div>
 <div class="col-md-2 col-sm-1 col-xl-3 card mr-xl-4">	
-<div class="card-header">
+<div class="card-header bg-white">
 <img src="images/Find Seating.png">
 </div>	
-<div class="card-footer">
+<div class="card-footer bg-white">
 <h5 align="center"><img src="images/seating_icon.png" class="mr-1"><b>FIND SEATING</b></h5>
 <P align="center">Seating arrangement of<br>main exams</P>
 </div>
 </div>
 <div class="col-md-2 col-sm-1 col-xl-3 card">
-<div class="card-header">
+<div class="card-header bg-white">
 <img src="images/offline.png">
 </div>
-<div class="card-footer">	
+<div class="card-footer bg-white">	
 <h5 align="center"><img src="images/offline_icon.png" class="mr-1"><b>OFFLINE STORAGE</b></h5>
 <P align="center">Save your mobile data with<br> CCAPP's offline storage</P>
 </div>
 </div>
 </div>	
 </div>	
-<div class="container-fluid mt-2">
+<div class="container-fluid">
 <div id="disqus_thread"></div>
 <script>
 
@@ -119,6 +120,13 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <script id="dsq-count-scr" src="//https-christcollegeapp-github-io.disqus.com/count.js" async></script>
-</div>                            
+</div>
+<div class="container-fluid bg-secondary"> 
+<p align="center" class="text-white">&copy;ADITYA R PAI<br><br>
+College App is developed by Johns Devassy and Aditya R Pai<br><br>
+Dept of Computer Science <br><br>
+Christ College Autonomous Irinjalakuda
+</p>	  
+</div>	                        
 </body>
 </html>
