--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
  	  <a class="nav-link" href="#disqus_thread">FEEDBACK/COMMENTS</a>
 	</li>
 	<li class="nav-item mr-xl-3 pb-2">
-		<a class="nav-link btn btn-light" style="color:black;">DOWNLOAD</a>
+		<a href="app/ccapp.apk"class="nav-link btn btn-light" style="color:black;" download>DOWNLOAD</a>
 	 </li>
  </ul>
 </div> 
@@ -64,7 +64,7 @@
 <h5 align="center"><p align="justify" style="line-height:35px;">It is the Official android app of Christ<br> College Irinjalakuda.College app provides<br>
 facilities like Find Room,Seating<br>Arrangement of main exam and lot more.<br><br>
 <a class="btn btn-light" style="color:black;" href="#FEATURES">Read More</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;<a class="btn btn-light" style="color:black;">DOWNLOAD</a>
+&nbsp;&nbsp;&nbsp;<a href="app/ccapp.apk" class="btn btn-light" style="color:black;" download>DOWNLOAD</a>
 </p></h5><br><br><br><br><br><br>
 </div>
 </div>	
@@ -105,7 +105,6 @@ facilities like Find Room,Seating<br>Arrangement of main exam and lot more.<br><
 <div class="container-fluid">
 <div id="disqus_thread"></div>
 <script>
-
 var disqus_config = function () {
 this.page.url = "https://christcollegeapp.github.io";  
 this.page.identifier = "disqus_thread"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
