--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  	  <a class="nav-link" href="#disqus_thread">FEEDBACK/COMMENTS</a>
 	</li>
 	<li class="nav-item mr-xl-3 pb-2">
-		<a href="#siteheader"class="nav-link btn btn-light" style="color:black;" download>DOWNLOAD</a>
+		<a href="#siteheader"class="nav-link btn btn-light" style="color:black;">DOWNLOAD</a>
 	 </li>
  </ul>
 </div> 
@@ -59,7 +59,7 @@
 <h5 align="center"><p align="justify" style="line-height:35px;">It is the Official android app of Christ<br> College Irinjalakuda.College app provides<br>
 facilities like Find Room,Seating<br>Arrangement of main exam and lot more.<br><br>
 <a class="btn btn-light" style="color:black;" href="#FEATURES">Read More</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;<a href="#siteheader" class="btn btn-light" style="color:black;" download>DOWNLOAD</a>
+&nbsp;&nbsp;&nbsp;<a href="#appdesc" class="btn btn-light" style="color:black;">DOWNLOAD</a>
 </p></h5><br><br><br><br><br><br>
 </div>
 </div>	
