"added icon and modified liink"

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+    <link rel="icon" type="image/png" href="favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Website of ccapp christ college app">
 	<link rel="stylesheet" href="styles/main.css">
@@ -32,7 +33,7 @@
  	  <a class="nav-link" href="#disqus_thread">FEEDBACK/COMMENTS</a>
 	</li>
 	<li class="nav-item mr-xl-3 pb-2">
-		<a href="https://drive.google.com/file/d/1ExxlyUtNG8efA8XZ_3c0m46xA1HayJNK/view?usp=drive_web"class="nav-link btn btn-light" style="color:black;" download target="_blank">DOWNLOAD</a>
+		<a href="http://bit.ly/2T8Tu9R"class="nav-link btn btn-light" style="color:black;" download target="_blank">DOWNLOAD</a>
 	 </li>
  </ul>
 </div> 
@@ -48,7 +49,7 @@
 <h5 align="center"><p align="justify" style="line-height:35px;">It is the Official android app of Christ<br> College Irinjalakuda.College app provides<br>
 facilities like Find Room,Seating<br>Arrangement of main exam and lot more.<br><br>
 <a class="btn btn-light" style="color:black;" href="#FEATURES">Read More</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;<a href="https://drive.google.com/file/d/1ExxlyUtNG8efA8XZ_3c0m46xA1HayJNK/view?usp=drive_web" class="btn btn-light" style="color:black;" target="_blank">DOWNLOAD</a>
+&nbsp;&nbsp;&nbsp;<a href="http://bit.ly/2T8Tu9R" class="btn btn-light" style="color:black;" target="_blank">DOWNLOAD</a>
 </p></h5><br><br><br><br><br><br>
 </div>
 </div>	
