footer colour changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Website of ccapp christ college app">
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
@@ -108,8 +109,8 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <script id="dsq-count-scr" src="//https-christcollegeapp-github-io.disqus.com/count.js" async></script>
 </div>
-<div class="container-fluid bg-secondary"> 
-<p align="center" class="text-white">&copy;ADITYA R PAI<br><br>
+<div class="container-fluid" style="background-color: #262432;"> 
+<p align="center" class="text-white">&copy;PAITRONICS<br><br>
 College App is developed by Johns Devassy and Aditya R Pai<br><br>
 Dept of Computer Science <br><br>
 Christ College Autonomous Irinjalakuda
